<resources>
    <string name="app_name">FastFoo</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_loginButton">Ingresar</string>
    <string name="login_noAccount">¿No tienes cuenta?</string>
    <string name="login_recoverAccount">¿Olvidaste tu contraseña?</string>
    <string name="img_logo_description">Imagen de logo de FastFoo</string>
    <string name="register_email_hint">Escribe tu email</string>
    <string name="register_password_hint">Escribe tu contraseña</string>
    <string name="register_passwordRepeat_hint">Confirma tu contraseña</string>
    <string name="register_houseDirection_hint">Escribe la dirección de tu casa</string>
    <string name="register_registerButton">Registrar</string>
    <string name="register_backButton_description">Botón de regress de registro</string>
    <string name="register_state_hint">¿En cuál estado vive?</string>
    <string name="dialog_okDialog_cancelButton">Cancelar</string>
    <string name="dialog_okDialog_acceptButton">Ok</string>
    <string name="none"></string>
    <string name="dialog_reocervEmail_text">Escribe tu dirección email para enviarte un correo de recuperación de contraseña:</string>
    <string name="main_navigation_home">Inicio</string>
    <string name="main_navigation_favoritos">Favoritos</string>
    <string name="main_navigation_carrito">Carrito</string>
    <string name="main_navigation_maps">Mapas</string>
    <string name="main_navigation_profile">Perfil</string>
    <string name="recyclerview_restaurant_grid_image">Restaurant image</string>
    <string name="recyclerview_restaurant_grid_title">Title</string>
    <string name="recyclerview_restaurant_grid_ubication">Ubicación</string>
    <string name="fragment_main_home_recycler_restaurants_title">Los restaurante más recientes en tu ciudad</string>
    <string name="fragment_main_home_recycler_carrito_fab_title">PAGAR</string>
    <string name="recyclerview_carrito_eliminar">Eliminar</string>
    <string name="dialog_inputText_input_new_password">Llene este formulario para proceder a cambiar la contraseña de su cuenta de FastFoo</string>
    <string name="dialog_inputText_input_new_password_hint">Ingrese su nueva contraseña</string>
    <string name="dialog_inputText_input_new_password_repeat_hint">Reingrese su nueva contraseña</string>
    <string name="dialog_inputText_acceptButton_change_password">Cambiar</string>
    <string name="mail_recovery_sucess">Se ha enviado el correo de recuperación</string>
    <string name="mail_recovery_error">No tenemos registrado este correo</string>
    <string name="ok">Ok</string>
    <string name="login_failure">El nombre de usuario o contraseña son incorrectos</string>
    <string name="register_payment_method">Escriba su método de pago</string>
    <string name="register_name">Escribe tu nombre</string>
    <string name="fragment_main_profile_change_payment_method_text">Cambiar método de pago</string>
    <string name="fragment_main_profile_change_address_text">cambiar dirección</string>
    <string name="fragment_main_profile_change_password_text">cambiar contraseña</string>
    <string name="fragment_main_profile_logout_text">cerrar sesión</string>
    <string name="fragment_main_profile_change_state_button_text">Cambiar estado</string>
    <string name="title_activity_shop_detail">ShopDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recyclerview_shop_agregar_test">Agregar</string>

</resources>