<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:checked="true"
        android:title="@string/main_navigation_home"/>

    <item
        android:id="@+id/main_navigation_favoritos"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/main_navigation_favoritos"/>

    <item
        android:id="@+id/main_navigation_carrito"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/main_navigation_carrito"/>

    <item
        android:id="@+id/main_navigation_maps"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/main_navigation_maps"/>

    <item
        android:id="@+id/main_navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/main_navigation_profile"/>
</menu>