<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fragment_main_profile_profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/logo"
        app:civ_border_color="?attr/colorSecondary"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_main_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_main_profile_profile_image"
        app:layout_constraintStart_toEndOf="@+id/fragment_main_profile_profile_image"
        app:layout_constraintTop_toTopOf="@+id/fragment_main_profile_profile_image"
        android:textStyle="bold"
        android:textSize="24dp"
        android:padding="10dp"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/fragment_main_profile_rol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_main_profile_profile_image"
        app:layout_constraintStart_toEndOf="@+id/fragment_main_profile_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main_profile_email"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/fragment_main_profile_change_payment_method_button"
        style="@style/Theme.FastFoo.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_profile_change_payment_method_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fragment_main_profile_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main_profile_rol" />

    <Button
        android:id="@+id/fragment_main_profile_change_address_button"
        style="@style/Theme.FastFoo.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_profile_change_address_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fragment_main_profile_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main_profile_change_payment_method_button" />

    <Button
        android:id="@+id/fragment_main_profile_change_state_button"
        style="@style/Theme.FastFoo.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_profile_change_state_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fragment_main_profile_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main_profile_change_address_button" />

    <Button
        android:id="@+id/fragment_main_profile_change_password_button"
        style="@style/Theme.FastFoo.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_profile_change_password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fragment_main_profile_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main_profile_change_state_button" />

    <Button
        android:id="@+id/fragment_main_profile_logout_button"
        style="@style/Theme.FastFoo.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_profile_logout_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>