<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:strokeWidth="1dp"
    app:strokeColor="?attr/colorPrimary"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Image -->
        <ImageView
            android:id="@+id/recyclerview_restaurant_grid_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/recyclerview_restaurant_grid_image"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:padding="8dp">

                <!--Titulo-->
                <TextView
                    android:id="@+id/recyclerview_restaurant_grid_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/recyclerview_restaurant_grid_title"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <!--Like-->
                <ImageButton
                    android:id="@+id/recyclerview_restaurant_grid_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_favorite_24"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/none"
                    app:tint="?attr/colorOnPrimary"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Ubication-->
            <TextView
                android:id="@+id/recyclerview_restaurant_grid_ubication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/recyclerview_restaurant_grid_ubication"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?attr/colorOnPrimary"
                />

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>