<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_inputSelection_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_inputSelection_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_marginVertical="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_state_hint"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/dialog_inputSelection_cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_okDialog_cancelButton"
                android:backgroundTint="?attr/colorSecondary"
                android:layout_weight="1"
                android:layout_marginRight="8dp"/>

            <Button
                android:id="@+id/dialog_inputSelection_acceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_okDialog_acceptButton"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>